* TODO Version 1.1

** TODO announce new version in PicoLisp  mailing-list
** TODO announce new version in Org-mode mailing-list
** TODO change version number (comment and const)


* NEXT Version 1.0

** DONE refactor out-xxtra.el (only extensions to out-xtra.el)
   CLOSED: [2013-02-14 Do 16:30]
   :LOGBOOK:
   - State "DONE"       from "TODO"       [2013-02-14 Do 16:30]
   :END:
   [2013-02-13 Mi 01:38]
** DONE make outxxtra independent from Org-mode
   CLOSED: [2013-02-14 Do 16:37]
   :LOGBOOK:
   - State "DONE"       from "TODO"       [2013-02-14 Do 16:37]
   :END:
   [2013-02-14 Do 16:36]
** TODO announce new version in Org-mode mailing-list
   [2013-02-14 Do 16:36]
** TODO announce new version in PicoLisp mailing-list
   [2013-02-13 Mi 01:37]
** TODO change version number (comment and const)
   [2013-02-13 Mi 01:37]
** TODO fix menu
   [2013-02-13 Mi 01:37]
** TODO develop README to Worg (Emacs Wiki?) article
   [2013-02-13 Mi 01:37]
** TODO write installation guide (with outline-magic)
   [2013-02-13 Mi 01:37]
** TODO check keybindings, compare to org
   [2013-02-13 Mi 01:36]
** TODO fix demote and promote subtree
   [2013-02-13 Mi 01:36]
** TODO check with different languages (comment-end true, e..g. HTML)
   [2013-02-13 Mi 01:36]
** TODO check with different languages (comment-end false, e.g. R, Java)
   [2013-02-13 Mi 01:36]


* Version 0.9
** DONE announce new version (still as outorg) in Org-mode mailing-list
   CLOSED: [2013-02-12 Di 00:08]
   :LOGBOOK:
   - State "DONE"       from "TODO"       [2013-02-12 Di 00:08]
   :END: